# SecurityProject_OpenSSL

Security_Project_WS/security_project/: .cproject  .project  AES_plainText_RSA_VERIFICATION.txt  privateKey  publicKey
Security_Project_WS/security_project/src/: CMakeLists.txt  aes.cpp  aes.h  main.cpp  rsa.cpp  rsa.h
